# ChangeLog for media-libs/xine-lib
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.683 2012/05/22 18:10:32 ssuominen Exp $

  22 May 2012; Samuli Suominen <ssuominen@gentoo.org> xine-lib-1.2.1-r1.ebuild,
  xine-lib-1.2.9999.ebuild:
  Change order to || ( media-video/ffmpeg $others ) for postproc.

  22 May 2012; Diego E. Pettenò <flameeyes@gentoo.org> xine-lib-1.2.1-r1.ebuild,
  xine-lib-1.2.9999.ebuild:
  Allow using older libav as well, for postproc.

  22 May 2012; Diego E. Pettenò <flameeyes@gentoo.org> xine-lib-1.2.1-r1.ebuild,
  xine-lib-1.2.9999.ebuild:
  Add an explicit dependency over libpostproc.

  17 May 2012; Samuli Suominen <ssuominen@gentoo.org> -xine-lib-1.2.1.ebuild:
  old

  17 May 2012; Samuli Suominen <ssuominen@gentoo.org> xine-lib-1.2.1-r1.ebuild:
  ppc/ppc64 stable wrt #412309

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> xine-lib-1.2.1.ebuild,
  xine-lib-1.2.1-r1.ebuild, xine-lib-1.2.9999.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  26 Apr 2012; Jeroen Roovers <jer@gentoo.org> xine-lib-1.2.1-r1.ebuild:
  Stable for HPPA (bug #412309).

  21 Apr 2012; Alexis Ballier <aballier@gentoo.org> xine-lib-1.2.1-r1.ebuild,
  +files/xine-lib-1.2.1-freebsd.patch:
  add patch to fix build on FreeBSD.

  18 Apr 2012; Agostino Sarubbo <ago@gentoo.org> xine-lib-1.2.1-r1.ebuild:
  Stable for amd64, wrt bug #412309

  18 Apr 2012; Jeff Horelick <jdhore@gentoo.org> xine-lib-1.2.1-r1.ebuild:
  marked x86 per bug 412309

  17 Apr 2012; Samuli Suominen <ssuominen@gentoo.org> -xine-lib-1.1.19.ebuild,
  -files/xine-lib-1.1.19-ffmpeg.patch, -files/xine-lib-1.1.19-xvmc.patch,
  -xine-lib-1.1.20.ebuild, -files/xine-lib-1.1.20-stat.patch,
  -xine-lib-1.2.0-r1.ebuild, -xine-lib-1.2.0-r2.ebuild,
  -files/xine-lib-1.2.0-zlib-1.2.5.2.patch:
  old

  18 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> xine-lib-1.1.19.ebuild: