@@ -5,14 +5,14 @@ AUX xine-lib-1.2.1-ffmpeg-git.patch 2314 RMD160 28f004b6e231034b28eed95368668451
 AUX xine-lib-1.2.1-fix_dvb_crc_checking.patch 634 RMD160 d6a54d7db42b21a944968b03738b028179d38888 SHA1 2c788361b1ebf6e643313f1912e574847d719d05 SHA256 6c0695a9ac6fb5b7bfbe6940847ae96f8e9836c55a2a1409e20faba13b6ba465
 AUX xine-lib-1.2.1-freebsd.patch 727 RMD160 98b42d42d298b5376413455e7a81364aced09184 SHA1 70ce386503b9a873d94c4f79f3622a5444c1cc07 SHA256 fb354f40252f0931d022d38d1c391cb55a615f5007a63f55bade30b54fe0e44b
 DIST xine-lib-1.2.1.tar.xz 4843584 RMD160 3cc17c3194797395ea1d696fee1dfa2d8acf1ddf SHA1 ebb2648456504ff4ce08c34de258d3125832bb94 SHA256 2d4ff0d275b46a197c6a914fdef154e9dd4c88b383f6e1f5efbb8d47a8e03d4e
-EBUILD xine-lib-1.2.1-r1.ebuild 5444 RMD160 a458d8f31dd27d128bc33681b5a59884a6bd49bb SHA1 ff40f31c37aea0a23fc77ace112871791f907a56 SHA256 47f636401768b405d26ebd3e0e27026302ef0002fee17dcaaa9945fee62775b0
-EBUILD xine-lib-1.2.9999.ebuild 5284 RMD160 173c6f92452afa622f520c79b5a5f2e60b3bf70a SHA1 5377f303a2699c78b147082f0e29ba3006adcb5e SHA256 7deb24002891db158f6c57a6cb400ac1db8df2276c348bb7562c1dfc848185b8
-MISC ChangeLog 80310 RMD160 163d769e63d14116bd900977ce99b0c41fd345cb SHA1 8e7cccfd0092d6e6eba0356037ad3286e92f5615 SHA256 939151578780683497b3af85e0a5432b31d6d17fb718628fd9021f9ac3ae8abe
+EBUILD xine-lib-1.2.1-r1.ebuild 5393 RMD160 4e9d0fab11ad9e9468492298269c68d90f03503d SHA1 465ae8704eb7ebb0ccb63e99269bcbcc7fc8510d SHA256 3050ff304484f59ce936f85cf8e9e3e53024a29b59c63eacfcc02cfe5c85ba45
+EBUILD xine-lib-1.2.9999.ebuild 5233 RMD160 ed195fe076ccaf3ab2054cda5a676b3d84456163 SHA1 199696b64b739c8defa193776cbb847c98616987 SHA256 885bf1bc7f6e1a47a531b1f07945cb3e8b3200db3b25ebd801d0e5243656109d
+MISC ChangeLog 80453 RMD160 114365e2c305ba63d7e6c1a3714c81c4afa9f3e7 SHA1 8898931497a94bc57b3f72087075b1a289f10cd4 SHA256 3cd9c62792b5d9ce39a519783165991e9099c4e22d7525027dccc8299fc3bf9a
 MISC metadata.xml 3072 RMD160 1e12a6a6a26545534c9a77ee57a04c3df6613772 SHA1 c0f3e790048f732dedb7de2478a1de54f327a2b7 SHA256 40718f6753a8cdbb8492ca71d3c335106fa7fe54cb4f6161ad1023ef8323af1e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk/CHAUACgkQX3X2B8XHTomVdQCgpalHfuJQJAAaRqPZoTP133W7
-e4UAnR2NgRsc36SOgUFTe9n1qu40qhjo
-=6b+h
+iEYEARECAAYFAk/LNHUACgkQX3X2B8XHTonYkgCfYZaPJkyhB+sXfXtwyynI9++U
+U7gAoJC3YgIqz0RAHdexUOVjI323oO2R
+=biuN
 -----END PGP SIGNATURE-----
