@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/xine-lib
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.683 2012/05/22 18:10:32 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.684 2012/06/01 02:41:55 zmedico Exp $
+
+  01 Jun 2012; Zac Medico <zmedico@gentoo.org> xine-lib-1.2.1-r1.ebuild,
+  xine-lib-1.2.9999.ebuild:
+  tweak inherits so repoman can parse them
 
   22 May 2012; Samuli Suominen <ssuominen@gentoo.org> xine-lib-1.2.1-r1.ebuild,
   xine-lib-1.2.9999.ebuild:
